--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/home_firstname"
         style="@style/FontHeading"
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -56,7 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/courses_height"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/text_name"
+        app:layout_constraintEnd_toEndOf="@+id/home_firstname"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         android:fillViewport="true"
         android:scrollbars=""
