--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,6 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView3"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/courses_height"
+        android:layout_marginTop="16dp"
+        android:fillViewport="true"
+        android:scrollbars=""
+        app:layout_constraintEnd_toEndOf="@+id/home_firstname"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView6">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button9"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button16"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button17"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button18"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button19"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button20"
+                style="@style/CourseThumb"
+                android:layout_width="@dimen/courses_thumb_width"
+                android:layout_height="@dimen/courses_height"
+                android:layout_weight="1"
+                android:text="Button" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <TextView
         android:id="@+id/home_firstname"
         style="@style/FontHeading"
@@ -41,46 +108,106 @@
         app:layout_constraintStart_toStartOf="@+id/styl"
         app:layout_constraintTop_toBottomOf="@+id/styl" />
 
-    <TextView
-        android:id="@+id/textView7"
-        style="@style/FontHeadingSm"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/assignments"
-        app:layout_constraintStart_toStartOf="@+id/styl"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3" />
+        android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3"
+        app:layout_constraintVertical_bias="0.0">
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView3"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/courses_height"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/home_firstname"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        android:fillViewport="true"
-        android:scrollbars=""
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        <ImageButton
+            android:id="@+id/home_code_playground_btn"
+            style="@style/ButtonIcon"
+            android:layout_width="@dimen/icons"
+            android:layout_height="@dimen/icons"
+            android:layout_marginStart="16dp"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_023_layers_3" />
 
-        <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/imageButton2"
+            style="@style/ButtonIcon"
+            android:layout_width="@dimen/icons"
+            android:layout_height="@dimen/icons"
+            android:layout_marginStart="16dp"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toEndOf="@+id/home_code_playground_btn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_023_layers_3" />
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="309dp"
-                android:layout_height="59dp"
-                android:layout_weight="1"
-                android:text="Button" />
+        <ImageButton
+            android:id="@+id/imageButton4"
+            style="@style/ButtonIcon"
+            android:layout_width="@dimen/icons"
+            android:layout_height="@dimen/icons"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageButton3"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_023_layers_3" />
 
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="232dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Button" />
-        </LinearLayout>
-    </HorizontalScrollView>
+        <ImageButton
+            android:id="@+id/imageButton3"
+            style="@style/ButtonIcon"
+            android:layout_width="@dimen/icons"
+            android:layout_height="@dimen/icons"
+            android:layout_marginStart="16dp"
+            android:scaleType="fitXY"
+            app:layout_constraintStart_toEndOf="@+id/imageButton2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_023_layers_3" />
+
+        <TextView
+            android:id="@+id/textView13"
+            style="@style/FontHeadingXsm"
+            android:layout_width="@dimen/icon_text_width"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/code_playground"
+            app:layout_constraintEnd_toEndOf="@+id/home_code_playground_btn"
+            app:layout_constraintStart_toStartOf="@+id/home_code_playground_btn"
+            app:layout_constraintTop_toBottomOf="@+id/home_code_playground_btn" />
+
+        <TextView
+            android:id="@+id/textView9"
+            style="@style/FontHeadingXsm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
+            app:layout_constraintStart_toStartOf="@+id/imageButton2"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+
+        <TextView
+            android:id="@+id/textView10"
+            style="@style/FontHeadingXsm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/imageButton3"
+            app:layout_constraintStart_toStartOf="@+id/imageButton3"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+
+        <TextView
+            android:id="@+id/textView11"
+            style="@style/FontHeadingXsm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/imageButton4"
+            app:layout_constraintStart_toStartOf="@+id/imageButton4"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
