--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_023_layers_3"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_courses" />
 
     <item
         android:id="@+id/navigation_notifications"
