--- a/app/src/main/res/drawable/edit_text.xml
+++ b/app/src/main/res/drawable/edit_text.xml
@@ -3,8 +3,8 @@
 
     <solid android:color="#FFFFFF" />
 
-    <stroke
-        android:width="2dp"
+    <strokex
+        android:width="1dp"
         android:color="@color/gray" />
     <corners
         android:radius="@dimen/ui_radius"
